      (CNY-805)
    * The error message produced by "cvc cook" when a source component
      exists on multiple branches with the same trailing label has
      been improved. (CNY-714)
    * Error handling when manipulating entitlements via XML-RPC has
      been improved. (CNY-692)
    * The usage message displayed when running "conary changeset" has
      been corrected. (CNY-864)

  o Optimizations
    * The getFileContents and getFileVersions server side calls have
      been optimized for faster execution
    * The SQL query in getTroveList has been sped up by a 3-5x factor.

  o Server Changes
    * Several SQL queries have been updated for PostgreSQL compatibility
    * dbstore now has support for executemany()

Changes in 1.0.30:
  o System Update Changes:
    These changes make Conary much more robust when applying updates
    that move files from one package to another.

    * Components that modify the same files are now required to be in
      the same update job.  For example, if a file moves from
      component a:runtime to component b:runtime, the erase of
      component a:runtime and the install of component b:runtime will
      occur at the same time. (CNY-758).
    * Files moving between components as part of a single job are now
      treated as file updates instead of separate add/remove events.
      (CNY-750, CNY-786, CNY-359)

  o Client Changes:
    * The source component is now displayed in "conary rq --info"
      output.
    * Entitlements can now be passed into ConaryClient and
      NetworkRepositoryClient objects directly. (CNY-640)
    * Exceptions raised in callback functions are now issued as
      warnings and the current job is finished before
      existing. KeyboardInterrupts and SystemExits are handled
      immediately. (CNY-806)
    * The "--debug" command line flag now provides information that is
      useful to the end-user during the update process.  The